modified logic of index person registration

--- a/freeBalance/html/history.html
+++ b/freeBalance/html/history.html
@@ -142,7 +142,7 @@
                   // }, 1000);
                 },
                 error: function (xhr) {
-                  console(xhr.status);
+                  console.log(xhr.status);
                 }
               });
            },
