--- a/freeBalance/html/index.html
+++ b/freeBalance/html/index.html
@@ -383,7 +383,7 @@
         localStorage.setItem('wx_openid',getUrlParam('opendid'));
         localStorage.setItem('hid',getUrlParam('hid'));
       }else{
-        console.log('opendid undefined')
+        console.log('opendid undefined');
       }
 
       $.ajax({ //请求体重等数据
