--- a/freeBalance/html/person.html
+++ b/freeBalance/html/person.html
@@ -68,7 +68,7 @@
     }
     .user-info .weui-input {
       text-align: right;
-      color: #000;
+      color: #555;
     }
     .user-info span.weui-cell__ft {
       margin-left: 6px;
@@ -120,7 +120,7 @@
   <section class="user-info">
     <div class="weui-cell">
       <div class="weui-cell__bd">性别</div>
-      <div class="weui-cell__ft">
+      <div class="weui-cell__ft color-333">
         <input id="sex" class="weui-input" type="text" value="--" disabled="disabled" readonly="">
       </div>
       <a href="./changePerson.html" class="more-row">
